--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -33,7 +33,7 @@
 
   min-width: 100%;
   min-height: 100%;
-  /*background-color: #666;*/
+  background-color: #666;
   text-shadow: 0 1px 5px rgba(0,0,0,.5);
 
 }
