--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -47,12 +47,31 @@
 	height: 100%;
 	padding: 1%;
 	background: #333333;
-	margin-top: 9%;
+	margin-top: 10%;
 	opacity: 0.7;
 }
 
 #slide-1-button {
 	height: 100%;
-	/*padding-top: 7%;*/
+	padding-top: 7%;
 	text-shadow: none;
 }
+
+
+
+/* Style rules for slide 2*/
+#slide-2 {
+	background: #EBEBEB;
+	color: #4D4D4D;
+}
+
+#slide-2-heading {
+	padding-top: 10%;
+	padding-bottom: 1%;
+}
+
+#slide-2-msg {
+	font-size: 114%;
+	padding-bottom: 10%;
+}
+
