--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -79,9 +79,11 @@
     text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
 }
 
-.icons {
-	text-align: right;
+.card {
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
+
 
 #slide-3-heading {
     padding-top: 10%;
