--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -80,8 +80,12 @@
 }
 
 .card {
-	padding-top: 0px;
+/*	padding-top: 0px;
 	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;*/
+	margin:0px;
+	padding:0px;
 }
 
 
