--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -21,10 +21,12 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    box-shadow: inset 0px 0px 300px 1px #000;
+    /*box-shadow: inset 0px 0px 300px 1px #000;*/
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
     min-width: 100%;
     min-height: 100%;
-    background-color: #666;
+    /*background-color: #666;*/
+        /*background-color: rgba(0,0,0,0.7);*/
     text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
 }
 
@@ -34,9 +36,9 @@
 
 #slide-1-msg {
     padding: 1%;
-    background: #333333;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
     margin-top: 10%;
-    opacity: 0.7;
+    /*opacity: 0.7;*/
 }
 
 #slide-1-button {
@@ -67,16 +69,17 @@
 
 #slide-3 {
     color: white;
-    /*background: url(../image/team-image2.jpg) no-repeat center center;*/
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
-    box-shadow: inset 0px 0px 300px 10px #371B52;
+    background: url(../image/team-image2.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    /*box-shadow: inset 0px 0px 300px 10px #371B52;*/
+    box-shadow: inset 0 0 0 1000px rgba(55,27,82,.8);
     min-width: 100%;
     min-height: 100%;
-    background-color: #371B52;
-    text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
+    /*background-color: #371B52;*/
+    text-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
 }
 
 #slide-3-heading {
