--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -178,6 +178,11 @@
 .staff-thumbnail > img:hover {
     box-shadow: 0px 0px 5px 1px #424242;
 }
+/* --------------------*/
+.staff-thumbnail-horizontal {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /* configuration for slide 5*/
