--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -21,28 +21,26 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    /*box-shadow: inset 0px 0px 300px 1px #000;*/
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
-    min-width: 100%;
-    min-height: 100%;
-    /*background-color: #666;*/
-        /*background-color: rgba(0,0,0,0.7);*/
+    min-width: 100vw;
+    min-height: 100vh;
     text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
 }
 
 #slide-1-heading {
-    padding-top: 11%;
+    padding-top: 23vh;
 }
+
+
 
 #slide-1-msg {
     padding: 1%;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
-    margin-top: 10%;
-    /*opacity: 0.7;*/
+    margin-top: 25vh;
 }
 
 #slide-1-button {
-    padding-top: 7%;
+    padding-top: 5vh;
     text-shadow: none;
 }
 
@@ -147,15 +145,16 @@
 
 /* Slide 4 */
 
+
 #slide-4 {
-    min-width: 100%;
-    min-height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     margin-top: 7%;
     margin-bottom: 7%;
+    min-width: 80vw;
+    min-height: 80vh;
 }
 
 #staff-large {
@@ -190,9 +189,9 @@
 #slide-5 {
     margin-top: 7%;
     margin-bottom: 7%;
-    /*margin-left: 10%;*/
-    /*margin-right: 10%;*/
-}
+/*    min-width: 100vw;
+    min-height: 100vh;
+*/}
 
 .slide-5-job-category {
     color: #DC403B;
