--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -22,7 +22,7 @@
     -o-background-size: cover;
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
-    min-width: 100vw;
+    min-width: 100vh;
     min-height: 100vh;
     text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
 }
@@ -200,4 +200,11 @@
 .job-link, .job-link:hover {
     text-decoration: none;
     color: black;
+}
+
+.row {
+    /*padding-left: 0px !important;*/
+    /*padding-right: 0px !important;*/
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
