--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -22,7 +22,7 @@
     -o-background-size: cover;
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
-    min-width: 100vh;
+    min-width: 100vw;
     min-height: 100vh;
     text-shadow: 0 1px 5px rgba(0, 0, 0, .5);
 }
@@ -202,9 +202,9 @@
     color: black;
 }
 
-.row {
-    /*padding-left: 0px !important;*/
-    /*padding-right: 0px !important;*/
+.better-row {
+    padding-right: 0px !important;
+    padding-left:  0px !important;
     margin-left: 0px !important;
     margin-right: 0px !important;
 }
