--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -201,10 +201,11 @@
     text-decoration: none;
     color: black;
 }
-
+/*
 .better-row {
     padding-right: 0px !important;
     padding-left:  0px !important;
     margin-left: 0px !important;
     margin-right: 0px !important;
 }
+*/
