--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -10,11 +10,15 @@
 }
 */
 
+/*heading of the slide*/
+.slide-heading {
+    margin-top: 7%;
+    margin-bottom: 3%;
+}
 
 /* configuration related to slide 1*/
 
 #slide-1 {
-    /*background: black;*/
     color: white;
     background: url(../image/team-image.jpg) no-repeat center center;
     -webkit-background-size: cover;
@@ -42,17 +46,15 @@
     text-shadow: none;
 }
 
-
 /* configuration for slide 2*/
-
 #slide-2 {
-    background: #EBEBEB;
-    color: #4D4D4D;
+    /*background: #EBEBEB;*/
+    /*color: #4D4D4D;*/
+    color: #8c95ac;
 }
 
 #slide-2-heading {
-    padding-top: 10%;
-    padding-bottom: 1%;
+    color: #6d768c;
 }
 
 #slide-2-msg {
@@ -64,16 +66,18 @@
 /* configuration for slide 3*/
 
 #slide-3 {
+    margin-top: -10%;
     color: white;
-    background: url(../image/team-image2.jpg) no-repeat center center;
+    background: url(../image/team-image3.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     /*box-shadow: inset 0px 0px 300px 10px #371B52;*/
-    box-shadow: inset 0 0 0 1000px rgba(55,27,82,.8);
+    /*box-shadow: inset 0 0 0 1000px rgba(55,27,82,.8);*/
+        box-shadow: inset 0 0 0 1000px rgba(121,138,169,.8);
     min-width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     /*background-color: #371B52;*/
     text-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
 }
@@ -113,9 +117,11 @@
     top: 34%;
 }
 
-.fa {
+.fa-chevron-left, .fa-chevron-right {
     font-size: 250%;
 }
+
+
 
 .owl-nav, .owl-controls {
     font-size: 43%;
@@ -185,8 +191,7 @@
 /* configuration for slide 5*/
 
 #slide-5 {
-    margin-top: 7%;
-    margin-bottom: 7%;
+    background: #f6f8ff;
 }
 
 .slide-5-job-category {
