--- a/test_page/css/style.css
+++ b/test_page/css/style.css
@@ -195,7 +195,8 @@ body {
 /* configuration for slide 5*/
 
 #slide-5 {
-
+    background: #f6f8ff;
+    padding-top: 1%;
 }
 
 .slide-5-job-category {
@@ -227,4 +228,5 @@ body {
 
 .job-extra:hover {
     border-color: #b6b6b6;
+    box-shadow: 0px 2px 1px 1px #EEEEEE;
 }
