--- a/test_page/styleForm2.css
+++ b/test_page/styleForm2.css
@@ -14,6 +14,11 @@
  * limitations under the License.
  */
 
+.others-job {
+ width:34vw;
+ border-radius: 5px;
+}
+
 .demo-ribbon {
   width: 100%;
   height: 40vh;
