--- a/test_page/contact_us.css
+++ b/test_page/contact_us.css
@@ -21,12 +21,12 @@
 .demo-ribbon {
   width: 100%;
   height: 30vh;
-  background-color: #9C0F5F;
+  background: #5B458D;
   flex-shrink: 0;
 }
 
 .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab {
-  background-color: #9C0F5F;
+    background: #5B458D;
 }
 
 .demo-main {
@@ -36,7 +36,7 @@
 
 .demo-header .mdl-layout__header-row {
   padding-left: 40px;
-    background-color: #9C0F5F;
+  background: #5B458D;
     color: white;
 }
 
