Job description: correcting form width

--- a/test_page/jobform/css/formstyle.css
+++ b/test_page/jobform/css/formstyle.css
@@ -23,6 +23,17 @@
 	padding: 43px;
 }
 
+@media (max-width: 500px) {
+	.jf {
+		padding: 7%;
+		background: #EEE;
+	}
+	.iform {
+		background: #EEE;
+	}
+}
+
+
 .required-field-mark  {
 	color:red;
 }
