--- a/test_page/jobform/css/formstyle.css
+++ b/test_page/jobform/css/formstyle.css
@@ -12,6 +12,11 @@
 	border-radius: 0px;
 }
 
+	.better-row {
+		margin-left: 0px !important;
+		margin-right: 0px !important;
+	}
+
 #logo {
 	width: 10%;
 	margin-left: 20%;
