--- a/test_page/jobform/css/mdl_custom.css
+++ b/test_page/jobform/css/mdl_custom.css
@@ -17,13 +17,17 @@
   width: calc(100%) !important;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 650px) {
     .job-main {
-      margin-left: 7%;
-      margin-right: 7%;
+      margin-left: 7% !important;
+      margin-right: 7% !important;
     }
 }
 
+.job-card-square {
+    width: 100%;
+  height: 320px;
+}
 
 
 @media (max-width: 600px) {
@@ -80,6 +84,7 @@
 
 .job-footer {
   padding-left: 40px;
+
 }
 
 .job-footer .mdl-mini-footer--link-list a {
