updating for checking changes

--- a/test_page/career/css/style.css
+++ b/test_page/career/css/style.css
@@ -204,7 +204,7 @@ body {
 /*--------------------------- configuration for slide 5----------------------*/
 
 #slide-5 {
-    background:#F0F1EE;
+    /*background:#F0F1EE;*/
     min-height: 100vh;
 
     padding-top: 1%;
