--- a/test_page/jobform/css/formstyle.css
+++ b/test_page/jobform/css/formstyle.css
@@ -1,25 +1,20 @@
 .other-job-link  {
-	color: #9c0f5f !important;
+	color: #3F51B5 !important;
 }
 
 #heading {
-	background:#9c0f5f;
+	background:#3F51B5;
 	color: white;
 }
 
 .navbar {
-	background:#9c0f5f;
+	background:#3F51B5;
 	border-radius: 0px;
 }
 
 .better-row {
 	margin-left: 0px !important;
 	margin-right: 0px !important;
-}
-
-#logo {
-	width: 10%;
-	margin-left: 20%;
 }
 
 /* configuration for form area */
