--- a/test_page/jobform/css/mdl_custom.css
+++ b/test_page/jobform/css/mdl_custom.css
@@ -43,12 +43,12 @@
 .job-ribbon {
   width: 100%;
   height: 30vh;
-  background-color: #9C0F5F;
+  background-color: #3F51B5;
   flex-shrink: 0;
 }
 
 .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab {
-  background-color: #9C0F5F;
+  background-color: #3F51B5;
 }
 
 .job-main {
@@ -58,7 +58,7 @@
 
 .job-header .mdl-layout__header-row {
   padding-left: 40px;
-    background-color: #9C0F5F;
+    background-color: #3F51B5;
     color: white;
 }
 
